
namespace Version2;

public class Bol : Contenant {
    public override decimal VolumeContenant => 350m;
    public override string Nom => "Bol";
}
