
namespace Version2;

public class Tasse : Contenant {
    public override decimal VolumeContenant => 250m;

    public override string Nom => "Tasse";
}
